crates/mdroots-syntax/tests/snapshots/notesvault__notes__note-a.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: Some(
        FmSummary {
            format: Yaml,
            error: None,
            entries: [
                (
                    "id",
                    Str(
                        "20260101a",
                    ),
                ),
                (
                    "type",
                    Str(
                        "note",
                    ),
                ),
                (
                    "stage",
                    Str(
                        "reading",
                    ),
                ),
                (
                    "title",
                    Str(
                        "Note A",
                    ),
                ),
                (
                    "date",
                    Str(
                        "2026-01-01",
                    ),
                ),
                (
                    "tags",
                    List(
                        [
                            "reading",
                            "notes",
                        ],
                    ),
                ),
                (
                    "source-url",
                    Str(
                        "—",
                    ),
                ),
                (
                    "source-cache",
                    Str(
                        "cache/1.html, cache/1.txt",
                    ),
                ),
            ],
        },
    ),
    headings: [
        HeadingSummary {
            level: 1,
            text: "Note A",
            slug: "note-a",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: BarePath,
            context: Frontmatter,
            confidence: Implicit,
            raw: "cache/1.html",
            path: "cache/1.html",
            anchor: None,
            label: None,
            line: None,
            group: Some(
                0,
            ),
            range: "cache/1.html",
            text_range: "cache/1.html",
            src_line: 9,
        },
        LinkSummary {
            kind: BarePath,
            context: Frontmatter,
            confidence: Implicit,
            raw: "cache/1.txt",
            path: "cache/1.txt",
            anchor: None,
            label: None,
            line: None,
            group: Some(
                0,
            ),
            range: "cache/1.txt",
            text_range: "cache/1.txt",
            src_line: 9,
        },
        LinkSummary {
            kind: Wiki,
            context: Prose,
            confidence: Explicit,
            raw: "note-b",
            path: "note-b",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[note-b]]",
            text_range: "note-b",
            src_line: 13,
        },
        LinkSummary {
            kind: Wiki,
            context: Prose,
            confidence: Explicit,
            raw: "note-b",
            path: "note-b",
            anchor: None,
            label: Some(
                "the B note",
            ),
            line: None,
            group: None,
            range: "[[note-b|the B note]]",
            text_range: "the B note",
            src_line: 13,
        },
        LinkSummary {
            kind: Wiki,
            context: Prose,
            confidence: Explicit,
            raw: "../concepts/b",
            path: "../concepts/b",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[../concepts/b]]",
            text_range: "../concepts/b",
            src_line: 14,
        },
        LinkSummary {
            kind: Wiki,
            context: Prose,
            confidence: Explicit,
            raw: "references/paper-1",
            path: "references/paper-1",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[references/paper-1]]",
            text_range: "references/paper-1",
            src_line: 14,
        },
    ],
    tags: [
        TagSummary {
            name: "reading",
            syntax: Frontmatter,
            range: "reading",
        },
        TagSummary {
            name: "notes",
            syntax: Frontmatter,
            range: "notes",
        },
    ],
    link_defs: [],
}
